--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 authors = ["Without Boats <lee@libertad.ucsd.edu>"]
-description = "Add dependencies to your Cargo.toml from the command line."
+description = "Add dependencies to your Cargo.toml from the command line (deprecated in favor of cargo-edit)."
 license = "Apache-2.0/MIT"
 name = "cargo-add"
-version = "0.1.0"
+version = "0.2.0"
 repository = "https://github.com/withoutboats/cargo-add"
 homepage = "https://github.com/withoutboats/cargo-add"
 
 [dependencies]
-docopt = "*"
-rustc-serialize = "*"
-semver = "*"
-toml = "*"
+docopt = "0.7.0"
+rustc-serialize = "=0.3.22"
+semver = "0.6.0"
+toml = "0.2"
